--- a/message/message-api-impl/pom.xml
+++ b/message/message-api-impl/pom.xml
@@ -9,12 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>message-handler</artifactId>
+    <artifactId>message-api-impl</artifactId>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>cn.sevenlion</groupId>
-            <artifactId>message-common</artifactId>
+            <artifactId>message-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
