--- a/message/pom.xml
+++ b/message/pom.xml
@@ -17,11 +17,20 @@
         <module>message-handler</module>
         <module>message-support</module>
         <module>message-web</module>
+        <module>message-api-impl</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>cn.sevenlion</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
